# CSC473-ClothCollisions

./: CMakeLists.txt  README.md
include/: CMakeLists.txt  Cloth.hpp  ClothCamera.hpp  ClothScene.hpp  Grid.hpp  PointMass.hpp  Quaternion.hpp  Spline.hpp  Spring.hpp  Table.hpp
shaders/: CMakeLists.txt  ShaderPaths.hpp.in  cube.fs.glsl  cube.vs.glsl
source/: CMakeLists.txt  Cloth.cpp  ClothCamera.cpp  ClothScene.cpp  Grid.cpp  PointMass.cpp  Quaternion.cpp  Spline.cpp  Spring.cpp  Table.cpp  main.cpp
